--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "mycommandcli": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
